[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/server",
    "crates/shared"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
shared = { path = "crates/shared" }
snow = "0.9"

# io
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "socket2"] }
tun-rs = { version = "1.5", features = ["async_tokio"] }
socket2 = "0.5.9"
ctrlc = "3.4"

# data
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.95"
etherparse = "0.17"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
