[package]
name = "client"
version = { workspace = true }
edition = { workspace = true }
autobins = false

[features]
default = []
custom-protocol = [ "gui", "tauri/custom-protocol" ]
gui = ["tauri", "tauri-build"]
cli = ["clap"]

[[bin]]
name = "client-cli"
path = "src/bin/cli/mod.rs"
required-features = ["cli"]

[[bin]]
name = "client-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]


[dependencies]
tauri = { version = "2.2.*", features = ["config-toml"],  optional = true }
shared = { workspace = true }

# IO
tokio = { version = "1.43.*", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "socket2"] }
tun-rs = { version = "1.5", features = ["async_tokio"] }
socket2 = "0.5.8"
pnet = "0.35.*"
ctrlc = "3.4.*"
clap = { version = "4.5.23", features = ["derive"], optional = true}

# Crypto
snow = "0.9"

# Data
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.*"
anyhow = "1.0.95"
bincode = "1.3.3"

# logging
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }



[build-dependencies]
tauri-build = { version = "2.0.*", features = ["config-toml"], optional = true }