[package]
name = "client"
version = { workspace = true }
edition = { workspace = true }
autobins = false

[features]
default = []
custom-protocol = [ "gui", "tauri/custom-protocol" ]
gui = ["tauri", "tauri-build"]
cli = ["clap"]

[[bin]]
name = "client-cli"
path = "src/bin/cli/mod.rs"
required-features = ["cli"]

[[bin]]
name = "client-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]


[dependencies]
tauri = { version = "2.4", features = ["config-toml"],  optional = true }
shared = { workspace = true }

# IO
tokio = { workspace = true }
tun-rs = { workspace = true }
socket2 = { workspace = true}
pnet = "0.35.*"
ctrlc = { workspace = true }
clap = { version = "4.5.23", features = ["derive"], optional = true}

# Crypto
snow = "0.9"

# Data
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = { workspace = true }
bincode = "1.3"

# logging
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }



[build-dependencies]
tauri-build = { version = "2.1", features = ["config-toml"], optional = true }