[package]
name = "client"
version = { workspace = true }
edition = { workspace = true }
autobins = false

[features]
default = ["cli"]
cli = ["clap", "ctrlc"]

[[bin]]
name = "client-cli"
path = "src/bin/mod.rs"
required-features = ["cli"]


[dependencies]
shared = { workspace = true }

# IO
tokio = { workspace = true }
tun-rs = { workspace = true }
socket2 = { workspace = true}
pnet = "0.35.*"
ctrlc = { workspace = true,  optional = true}
clap = { version = "4.5.23", features = ["derive"], optional = true}

# Crypto
snow = "0.9"

# Data
thiserror = "2.0"
anyhow = { workspace = true }
bincode = { workspace = true }

# logging
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
