[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
autobins = false

[features]
default = ["cli"]
cli = ["clap", "inquire", "anstyle", "ctrlc"]

[[bin]]
name = "server"
path = "src/bin/mod.rs"
required-features = ["cli"]

[dependencies]
shared = { workspace = true }
clap = { version = "4.5", features = ["cargo", "color", "derive", "env"], optional = true}
inquire = { version = "0.7", optional = true }
anstyle = { version = "1.0", optional = true }
ctrlc = { version = "3.4", optional = true }

# data
chrono = { workspace = true }
etherparse = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = "1.0"
dashmap = "7.0.0-rc2"
bincode = { workspace = true }
derive_more = { version = "1.0", features = ["display"] }
toml = "0.8.19"

# logging
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }

# Crypto
snow = { workspace = true }

# IO
rocksdb = { version = "0.23", features = ["multi-threaded-cf"] }
tun-rs = { workspace = true }
tokio = { workspace = true }
socket2 = "0.5.8"
async-trait = "0.1"
hex = "0.4.3"
rand = "0.9.1"
