[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
autobins = false

[features]
default = ["cli"]
udp = ["socket2"]
ws = ["tokio-tungstenite", "futures", "socket2"]
cli = ["clap", "inquire", "anstyle", "ctrlc", "fjall"]

[[bin]]
name = "server"
path = "src/bin/mod.rs"
required-features = ["cli"]

[dependencies]
shared = { workspace = true }
clap = { version = "4.5", features = ["cargo", "color", "derive", "env"], optional = true}
inquire = { version = "0.7", optional = true }
anstyle = { version = "1.0", optional = true }
ctrlc = { version = "3.4", optional = true }

# data
chrono = { workspace = true }
etherparse = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = "2.0.12"
dashmap = "7.0.0-rc2"
bincode = { workspace = true }
derive_more = { version = "2.0.1", features = ["display"] }
toml = { workspace = true }

# logging
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }

# Crypto
snow = { workspace = true }

# IO
fjall = { version = "2.10.0", optional = true }
tun-rs = { workspace = true }
tokio = { workspace = true }
socket2 = { workspace = true, optional = true }
async-trait = "0.1"
rand = "0.9.1"
qrcode = { version = "0.14.1", default-features = false, features = ["pic"] }
tokio-tungstenite = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3