[package]
name = "shared"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
pnet = "0.35.*"
snow = { workspace = true }
serde = { workspace = true }
base64 = "0.22.1"
toml = "0.8.19"
bincode = "1.3.*"
rand_core = "0.6.4"
lazy_static = "1.5.0"
anyhow = { workspace = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
once_cell = "1.21.3"