[package]
name = "shared"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
pnet = "0.35.*"
snow = { workspace = true }
serde = { workspace = true }
tun-rs = { workspace = true }
base64 = "0.22.1"
toml = { workspace = true }
anstyle = { workspace = true }
clap = { workspace = true }
bincode = { workspace = true, features = ["serde"]}
rand_core = { workspace = true }
lazy_static = "1.5.0"
anyhow = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
once_cell = "1.21.3"