[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
env_logger = "^0.11"
mio = { version = "^1.0", features = ["os-poll", "os-ext", "net",] }
log = "^0.4"
tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "macros"] }
tun = "^0.6"
