[package]
name = "server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
sunbeam = { workspace = true }
shared = { workspace = true }
tun = { workspace = true }
mio = { workspace = true }
clap = { version = "4.5.*", features = ["cargo", "color", "derive"] }
pnet = "0.35.*"

# data
chrono = { workspace = true }
serde = { workspace = true}
etherparse = { workspace = true }

# logging
log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
toml = "0.8.19"
rocksdb = "0.23.*"
bincode = "1.3.3"
serde-big-array = "0.5.*"
rand = "0.9.0-beta.1"
daemonize = "0.5.*"
thiserror = "2.0.9"
serde_json = "1.0.133"
inquire = "0.7.*"
derive_more = { version = "1.0.*", features = ["display"] }
base64 = "0.22.1"
