[package]
name = "server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
sunbeam = { workspace = true }
shared = { workspace = true }
tun = { workspace = true }
mio = { workspace = true }
clap = { version = "4.5.*", features = ["cargo", "color", "derive"] }
pnet = "0.35.*"

# data
chrono = { workspace = true }
serde = { workspace = true}
etherparse = { workspace = true }

# logging
log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
toml = "0.8.19"
rocksdb = { version = "0.23.*", features = ["multi-threaded-cf"] }
bincode = "1.3.3"
serde-big-array = "0.5.*"
rand = "0.9.0-beta.1"
daemonize = "0.5.*"
thiserror = "2.0.9"
serde_json = "1.0.133"
inquire = "0.7.*"
derive_more = { version = "1.0.*", features = ["display"] }
base64 = "0.22.1"
tokio = { version = "1.43.*", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "socket2"] }
tun-rs = { version = "1.5", features = ["async_tokio"] }
socket2 = "0.5.8"
anyhow = "1.0.95"
async-trait = "0.1.85"
anstyle = "1.0.10"
