[package]
name = "server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
shared = { workspace = true }
clap = { version = "4.5.*", features = ["cargo", "color", "derive"] }
inquire = "0.7.*"
anstyle = "1.0.10"
ctrlc = "3.4"

# data
chrono = { workspace = true }
etherparse = { workspace = true }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
anyhow = "1.0.97"
thiserror = "1.0.69"
dashmap = "7.0.0-rc2"
bincode = "=1.3.3"
derive_more = { version = "1.0.*", features = ["display"] }
toml = "0.8.19"
serde-big-array = "0.5.*"
serde_json = "1.0.133"

# logging
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }


# Crypto
snow = "0.9"

# IO
pnet = "0.35.*"
rocksdb = { version = "0.23.*", features = ["multi-threaded-cf"] }
tun-rs = { version = "1.5", features = ["async_tokio"] }
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "socket2", "net"] }
socket2 = "0.5.8"
async-trait = "0.1"
hex = "0.4.3"
