[package]
name = "sunbeam"
version = "0.1.0"
edition = "2021"

[dependencies]
tun = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.*"
bincode = "^1.3"
is-root = "^0.1"

# logging
log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
toml = "0.8.*"
thiserror = "2.0.*"
aes-gcm = "0.10.*"
hkdf = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
chacha20poly1305 = "0.10.*"
rand = "0.9.0-beta.1"
serde-big-array = "0.5.*"
base64 = "0.22.*"
clap = { version = "4.5.*", features = ["derive"] }
strum = "0.26.*"
strum_macros = "0.26.*"