[package]
name = "transport"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Crypto
rand = "=0.6.4"
rand_core = { version = "=0.6.4"}
snow = "0.9"
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }

# IO
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "socket2", "net"] }
socket2 = "0.5.8"
async-trait = "0.1"

# Data
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
anyhow = "1.0.97"
thiserror = "1.0.69"
dashmap = "7.0.0-rc2"
bincode = "=1.3.3"
lazy_static = "1.5.0"